Fix dark mode text color

--- a/app/pb_kits/playbook/pb_list_radios/_list_radios.scss
+++ b/app/pb_kits/playbook/pb_list_radios/_list_radios.scss
@@ -7,3 +7,10 @@
   }
 }
 
+.pb_list_radios {
+   &.dark {
+    .pb_radios_kit.input {
+      text-decoration: white;
+    }
+  }
+}
